--- a/FinanceLens.ipynb
+++ b/FinanceLens.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt+Wnn8ImDaTnRJQPeTcNs",
+      "authorship_tag": "ABX9TyNvPekq1lrfNH9Zuz0SaYT/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,6 +214,223 @@
       ],
       "metadata": {
         "id": "9wC1Cnd0ByK2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para transformar o projeto em uma página web, você pode usar um framework de backend como Flask ou FastAPI combinado com um framework de frontend ou bibliotecas de visualização como Dash para interfaces interativas. Aqui está o processo básico com Flask:"
+      ],
+      "metadata": {
+        "id": "snmoFYLcDqko"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install flask pandas matplotlib seaborn\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XOSwL9vYDtT0",
+        "outputId": "764e711f-eb7f-404b-abb4-9a850f7ae97d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: flask in /usr/local/lib/python3.10/dist-packages (3.0.3)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (3.8.0)\n",
+            "Requirement already satisfied: seaborn in /usr/local/lib/python3.10/dist-packages (0.13.2)\n",
+            "Requirement already satisfied: Werkzeug>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from flask) (3.1.3)\n",
+            "Requirement already satisfied: Jinja2>=3.1.2 in /usr/local/lib/python3.10/dist-packages (from flask) (3.1.4)\n",
+            "Requirement already satisfied: itsdangerous>=2.1.2 in /usr/local/lib/python3.10/dist-packages (from flask) (2.2.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in /usr/local/lib/python3.10/dist-packages (from flask) (8.1.7)\n",
+            "Requirement already satisfied: blinker>=1.6.2 in /usr/local/lib/python3.10/dist-packages (from flask) (1.9.0)\n",
+            "Requirement already satisfied: numpy>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (4.55.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.4.7)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (24.2)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (11.0.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (3.2.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from Jinja2>=3.1.2->flask) (3.0.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Organize o projeto em pastas para facilitar a manutenção:\n",
+        "project/\n",
+        "├── app.py                # Arquivo principal do Flask\n",
+        "├── static/               # Arquivos estáticos (CSS, JS, etc.)\n",
+        "├── templates/            # Arquivos HTML\n",
+        "└── data/                 # Dados de entrada e saída\n"
+      ],
+      "metadata": {
+        "id": "a01IGSqvD0wC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Código principal (app.py)\n",
+        "\n",
+        "from flask import Flask, render_template, request, redirect, url_for, send_file\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import os\n",
+        "\n",
+        "app = Flask(__name__)\n",
+        "\n",
+        "# Initialize the FinanceLens class (adapt it from your current implementation)\n",
+        "class FinanceLens:\n",
+        "    def __init__(self):\n",
+        "        self.data = None\n",
+        "\n",
+        "    def load_data(self, file_path):\n",
+        "        if file_path.endswith('.csv'):\n",
+        "            self.data = pd.read_csv(file_path)\n",
+        "        elif file_path.endswith(('.xls', '.xlsx')):\n",
+        "            self.data = pd.read_excel(file_path)\n",
+        "        else:\n",
+        "            raise ValueError(\"Unsupported file format. Use CSV or Excel files.\")\n",
+        "\n",
+        "    def calculate_indicators(self):\n",
+        "        if self.data is None:\n",
+        "            return \"No data loaded.\"\n",
+        "        self.data['Liquidity Current'] = self.data['Current Assets'] / self.data['Current Liabilities']\n",
+        "        self.data['ROE'] = self.data['Net Income'] / self.data['Equity']\n",
+        "        self.data['Gross Margin'] = self.data['Gross Profit'] / self.data['Revenue']\n",
+        "\n",
+        "    def generate_visualization(self, output_path):\n",
+        "        if self.data is None:\n",
+        "            return \"No data loaded.\"\n",
+        "        sns.lineplot(data=self.data, x='Year', y='Gross Margin', marker='o')\n",
+        "        plt.title('Gross Margin Over Time')\n",
+        "        plt.savefig(output_path)\n",
+        "        plt.close()\n",
+        "\n",
+        "finance_lens = FinanceLens()\n",
+        "\n",
+        "@app.route('/')\n",
+        "def index():\n",
+        "    return render_template('index.html')\n",
+        "\n",
+        "@app.route('/upload', methods=['POST'])\n",
+        "def upload():\n",
+        "    if 'file' not in request.files:\n",
+        "        return \"No file uploaded.\"\n",
+        "    file = request.files['file']\n",
+        "    file_path = os.path.join('data', file.filename)\n",
+        "    file.save(file_path)\n",
+        "\n",
+        "    try:\n",
+        "        finance_lens.load_data(file_path)\n",
+        "        finance_lens.calculate_indicators()\n",
+        "        return redirect(url_for('visualize'))\n",
+        "    except Exception as e:\n",
+        "        return f\"Error: {e}\"\n",
+        "\n",
+        "@app.route('/visualize')\n",
+        "def visualize():\n",
+        "    output_path = 'static/visualization.png'\n",
+        "    try:\n",
+        "        finance_lens.generate_visualization(output_path)\n",
+        "        return render_template('visualize.html', image_path=output_path)\n",
+        "    except Exception as e:\n",
+        "        return f\"Error generating visualization: {e}\"\n",
+        "\n",
+        "@app.route('/download')\n",
+        "def download():\n",
+        "    output_file = 'data/financial_report.csv'\n",
+        "    try:\n",
+        "        finance_lens.data.to_csv(output_file, index=False)\n",
+        "        return send_file(output_file, as_attachment=True)\n",
+        "    except Exception as e:\n",
+        "        return f\"Error exporting data: {e}\"\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    app.run(debug=True)\n"
+      ],
+      "metadata": {
+        "id": "AP5L12JID882"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Arquivos HTML\n",
+        "<!DOCTYPE html>\n",
+        "<html>\n",
+        "<head>\n",
+        "    <title>FinanceLens</title>\n",
+        "</head>\n",
+        "<body>\n",
+        "    <h1>Welcome to FinanceLens</h1>\n",
+        "    <form action=\"/upload\" method=\"post\" enctype=\"multipart/form-data\">\n",
+        "        <label for=\"file\">Upload Financial Data:</label>\n",
+        "        <input type=\"file\" name=\"file\" id=\"file\" required>\n",
+        "        <button type=\"submit\">Upload</button>\n",
+        "    </form>\n",
+        "</body>\n",
+        "</html>\n"
+      ],
+      "metadata": {
+        "id": "3vR5JBevEDIi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Execute o servidor Flask\n",
+        "python app.py\n"
+      ],
+      "metadata": {
+        "id": "c3M5Ox3qEMCa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Deploy para Produção\n",
+        "Use plataformas como:\n",
+        "\n",
+        "Heroku: Para um deploy rápido.\n",
+        "AWS ou Google Cloud: Para projetos maiores.\n",
+        "Docker: Para criar um contêiner portátil da aplicação.\n",
+        "\n",
+        "\n",
+        "Considerações Finais\n",
+        "Este é um esqueleto básico para integrar o FinanceLens em uma aplicação web utilizando Flask. Dependendo das necessidades específicas, você pode:\n",
+        "\n",
+        "Melhorar a Interface: Utilizar frameworks como Bootstrap para aprimorar o design.\n",
+        "Adicionar Funcionalidades: Implementar autenticação de usuários, armazenamento em banco de dados, entre outros.\n",
+        "Implantação: Hospedar a aplicação em serviços como Heroku ou AWS para torná-la acessível na web."
+      ],
+      "metadata": {
+        "id": "XmheTqNJEeAI"
       }
     }
   ]
